infrastructure/k8s/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    name: keycloak
    environment: dev
